# VKK-retail

./: .gitignore  pyproject.toml  theme.json
src/: az_table.py  checks.py  config.py  get_excel_data.py  main.py  pymongo_db.py
