[tool.poetry]
name = "vkk-retail"
version = "0.1.0"
description = ""
authors = ["cltj <tj@cloudlink.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
numpy = "^1.22.3"
requests = "^2.27.1"
azure-data-tables = "^12.3.0"
seaborn = "^0.11.2"
azure-core = "^1.23.0"
matplotlib = "^3.5.1"
pymongo = "^4.0.2"
dnspython = "^2.2.1"
python-dotenv = "^0.19.2"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
